# hy-cyber-base-project-1

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: api.py  main.py
src/database/: init.sql  schema.sql  sqlite.py  typings.py
src/public/: main.css
src/templates/: skeleton.html
src/templates/components/: sidebar.html
src/templates/dialogs/: create-dm.html  create-group.html  edit-group.html  invite.html
src/templates/pages/: home.html  login.html  register.html
src/util/: auth.py  includes.py
