[project]
name = "zero-chat"
version = "0.1.0"
description = "Cyber Security Base Course Project 1"
authors = [
    {name = "Esinko", email = "eemil.sinkko(at)removethis.helsinki.fi"},
]
dependencies = ["flask>=2.2.5", "flask-login>=0.6.3"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm.scripts]
start = "python src/main.py"


[tool.pdm]
distribution = false
