[project]
name = "zero-chat"
version = "0.1.0"
description = "Cyber Security Base Course Project 1"
authors = [
    {name = "Esinko", email = "eemil.sinkko(at)removethis.helsinki.fi"},
]
dependencies = ["flask>=2.2.5"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm.scripts]
start = "flask --app ./src/main.py run"


[tool.pdm]
distribution = false
